# jorji

./: .coveragerc  .gitignore  CONTRIBUTING.rst  ChangeLog  MANIFEST.in  README.rst  setup.cfg  tox.ini
jorji/: __init__.py
jorji/test/: __init__.py
