[metadata]
name = jorji
author = Laurens Van Houtven (lvh)
author-email = _@lvh.io
summary = Toolkit for testing if you actually verify TLS certificates
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: No Input/Output (Daemon)
    Framework :: Twisted
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Communications
    Topic :: Internet
    Topic :: Security
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
keywords =
    ssl
    tls
    infosec
    security
    certificate
    verification
[files]
packages =
    jorji
